--- a/templates/setup.html
+++ b/templates/setup.html
@@ -48,20 +48,15 @@
                 </label>
             </span>
             <br/>
-        </div>
-    </div>
-    <div class="container main-container" style="margin-bottom:100px;">
-        <div id="login-container" class="col-md-6 col-md-offset-3">
             <div class="submit-row text-center">
                 <button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined">Submit</button>
             </div>
-        </div>
+        </form>
     </div>
-    </form>
 </div>
 
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/style.js"></script>
+    <script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/style.js"></script>
 {% endblock %}
