--- a/templates/login.html
+++ b/templates/login.html
@@ -67,6 +67,6 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/style.js"></script>
+    <script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/style.js"></script>
 {% endblock %}
 
