--- a/templates/register.html
+++ b/templates/register.html
@@ -6,48 +6,56 @@
 {% block content %}
 <div class="jumbotron home">
     <div class="container">
-        <h1>Reset Password</h1>
+        <h1>Register</h1>
     </div>
 </div>
 <div class="container main-container">
     <div class="row">
         <div id="login-container" class="col-md-6 col-md-offset-3">
             {% for error in errors %}
-                <div class="alert alert-info alert-dismissable" role="alert">
+                <div class="alert alert-danger alert-dismissable" role="alert">
                   <span class="sr-only">Error:</span>
                   {{ error }}
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
                 </div>
             {% endfor %}
             <form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
-                <input name='nonce' type='hidden' value="{{ nonce }}">
-                {% if mode %}
                 <div class="row">
                     <div class="col-md-12">
                         <span class="input">
-                        <input class="input-field" type="password" name="password" id="password-input" />
-                        <label class="input-label" for="password-input">
-                            <span class="label-content" data-content="Password">Password</span>
+                        <input class="input-field" type="text" name="name" id="input-10" {% if name %}value="{{ name }}"{% endif %} />
+                        <label class="input-label" for="input-10">
+                            <span class="label-content" data-content="Team Name">Team Name</span>
                         </label>
+                    </span>
                     </div>
                 </div>
-                {% else %}
                 <div class="row">
                     <div class="col-md-12">
                         <span class="input">
-                        <input class="input-field" type="text" name="email" id="input-10" />
+                        <input class="input-field" type="text" name="email" id="input-10" {% if email %}value="{{ email }}"{% endif %} />
                         <label class="input-label" for="input-10">
                             <span class="label-content" data-content="Email">Email</span>
                         </label>
                     </span>
                     </div>
                 </div>
-                {% endif %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="input">
+                        <input class="input-field" type="password" name="password" id="input-10" {% if password %}value="{{ password }}"{% endif %}/>
+                        <label class="input-label" for="input-10">
+                            <span class="label-content" data-content="Password">Password</span>
+                        </label>
+                    </span>
+                    </div>
+                </div>
                 <div class="done-row row">
                     <div class="col-md-6 col-md-offset-6" style="margin-top:10px">
                         <button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined pull-right">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="nonce" value="{{ nonce }}">
             </form>
         </div>
     </div>
@@ -55,5 +63,10 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/style.js"></script>
+<script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/style.js"></script>
+<script>
+    if (window.location.hash == "#frame"){
+        $('.top-bar').hide()
+    }
+</script>
 {% endblock %}
