--- a/templates/team.html
+++ b/templates/team.html
@@ -9,7 +9,23 @@
         <h1 id="team-id">{{ team.name }}</h1>
     </div>
 </div>
-<div class="container">
+<div class="container main-container">
+    {% if errors %}
+            <div id='errors' class="row">
+        {% for error in errors %}
+                <h1>{{ error }}</h1>
+        {% endfor %}
+            </div>
+    {% else %}
+
+        {% if score_frozen %}
+        <div class="container main-container">
+            <div class="row">
+                <h1>Scoreboard has been frozen.</h1>
+            </div>
+        </div>
+        {% endif %}
+
     <div class="team-info">
         <h2 id="team-place" class="text-center">
             {%if place %}
@@ -35,20 +51,19 @@
     {% if awards %}
     <div class="row">
         <h3>Awards</h3>
-            {% set count = awards|length %}
-            {% set rem = awards|length % 4 %}
             {% for award in awards %}
-                {% if count >= 4 %}
-                    <div class="col-xs-3 col-md-3">
-                {% else %}
+                {% set count= awards|length - loop.index %}
+                {% set rem = awards|length % 4 %}
+                {% if count < rem %}
                     <div class="col-xs-{{ (12//rem)|string }} col-md-{{ (12//rem)|string }}">
+                {% else %}
+                    <div class="col-xs-3 col-md-3">
                 {% endif %}
                         <p class="text-center"><strong>{{ award.name }}</strong></p>
                         {% if award.category %}<p class="text-center">{{ award.category }}</p>{% endif %}
-                        <p class="text-center">{{ award.description }}</p>
+                        {% if award.description %}<p class="text-center">{{ award.description }}</p>{% endif %}
                         <p class="text-center">{{ award.value }}</p>
                     </div>
-                {% set count = count - 1 %}
             {% endfor %}
     </div>
 
@@ -77,11 +92,12 @@
             </tbody>
         </table>
     </div>
+    {% endif %}
 </div>
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/vendor/plotly.min.js"></script>
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/utils.js"></script>
-    <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/team.js"></script>
+    <script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/vendor/plotly.min.js"></script>
+    <script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/utils.js"></script>
+    <script src="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/js/team.js"></script>
 {% endblock %}
